syntax="proto3";
package game;

message sync_session{
    string session=1;
    int32 table_no = 2;
}

message game_mng_result {
    bool result = 1;
}

message user_login {
    string code=1;
}

message user_qq_login {
    string openid=1;
    string acctok = 2;
}

message user_login_resp {
    bool result = 1;
    string session = 2;
}

message user_info_resp {
    string user_name = 1;
    string user_logo = 2;
    int32 user_cash = 3;
    int32 table_no = 4;
    int32 seat_no = 5;
}

message add_cash_req {
    string ssid = 1;
    int32 cash = 2;
}

message create_table_resp {
    bool result = 1;
    int32 table_no = 2;
}

message table_seat_player {
    int32 seat_no = 1;
    string name = 2;
    int32 total_cash = 3;
    int32 bat_cash = 4;
}

message table_info_sync {
    int32 table_no = 1;
    repeated table_seat_player players = 2;
}

message player_sit_down_req {
    int32 seat_no = 1;
    int32 carry_cash = 2;
}

